# hackrice

./: package-lock.json
client/: package-lock.json  package.json
client/src/: AboutPage.css  AboutPage.jsx  Chatbot.css  Chatbot.jsx  HomePage.css  HomePage.jsx  NavBar.css  NavBar.jsx  ResourcesPage.css  ResourcesPage.jsx  index.css
server/: pyproject.toml
server/src/: app.py
server/src/data/: All_Programs_Data.csv  social_links.json  social_welfare_programs.json
server/src/models/: __init__.py  chat_session.py  user.py  welfare_program.py
server/src/routes/: eligibility_bot.py  eligibility_optimizer.py
server/src/services/: chat_bot.py  data_loader.py  eligibility_bot.py  eligibility_optimizer.py  rank_programs_bot.py  stochastic_query.py  welfare_service.py
